--- a/src/template.html
+++ b/src/template.html
@@ -48,10 +48,10 @@
         <h1 class="hero-title" class="load-hidden">
           Hi, my name is <span class="text-color-main">Amin Goni</span>
           <br />
-          I'm A Front-End Web Developer.
+          I'm A Front-End Web Developer and UX Designer.
         </h1>
         <p class="hero-cta" class="load-hidden">
-          <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
+          <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#contact"
             >Hire Me</a
           >
         </p>
@@ -79,10 +79,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                I am a Front-End Web Developer with about a year's experience.
+                I am a Front-End Web Developer with about a year's experience. I am also a UX Designer in training. I love creating responsive and modern websites and incorporating my user experience design knowledge into the websites I develop.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                I love everything tech! I am also a gamer, I love video games. I am a huge sports fan too, I love football, Formula 1, tennis and badminton.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -114,11 +114,7 @@
                 <h3 class="project-wrapper__text-title">Unlimited Brain Works</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    This is a landing page I made for an upcoming startup called 'Unlimted Brain Works'. I developed it as an exercise in a web development course I enrolled in. I used HTML and CSS only to make the page. It is fully responsive.
                   </p>
                 </div>
                 <a
@@ -162,11 +158,7 @@
                 <h3 class="project-wrapper__text-title">SAI Drill Tech</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    This is a landing page I made for a drlling company. I made it using HTML and CSS and a bit of Javascript to add functionality. I developed it just to practice my HTML and CSS so most of the details on the website are placeholders. I intend to build and deploy it into a fully functional and accessible website in the near-future.
                   </p>
                 </div>
                 <a
@@ -210,11 +202,7 @@
                 <h3 class="project-wrapper__text-title">Background Generator</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    This is a website I developed whilst learning Javascript. It can be used to generate beautiful background gradients that can be used by others. The RGBA code of the color generated is displayed so that users can copy it for their own use.
                   </p>
                 </div>
                 <a
@@ -243,6 +231,50 @@
                       alt="Project Image"
                       class="img-fluid"
                       src="assets/project2.jpg"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">RoboFriends</h3>
+                <div>
+                  <p class="mb-4">
+                    This is a website I developed using React. I developed it as part of an exercise while learning React. I used the names of some of my friends just for fun and to include them in my web development journey. This is the first project I developed using react.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://amgoni.github.io/robofriends/"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/amgoni/robofriends"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a rel="noreferrer" href="https://amgoni.github.io/robofriends/" target="_blank">
+                  <div data-tilt class="thumbnail rounded js-tilt">
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/project3.jpg"
                     />
                   </div>
                 </a>
@@ -283,10 +315,10 @@
           <a rel="noreferrer" href="twitter.com/ameengoni" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <!-- <a rel="noreferrer" href="#!" target="_blank">
             <i class="fa fa-codepen fa-inverse"></i>
-          </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          </a> -->
+          <a rel="noreferrer" href="www.linkedin.com/in/amingoni" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
           <a rel="noreferrer" href="github.com/amgoni" target="_blank">
